<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优医2.1医生测试版</string>
    <string name="footer_consultation">医疗互动</string>
    <string name="footer_manager">健康管理</string>
    <string name="footer_team">健康团队</string>
    <string name="footer_individual">首页</string>

    <string name="all_consultation">所有咨询</string>
    <string name="follow">线上随访</string>
    <string name="line_check">线下预约</string>
    <string name="new_consultation">新建咨询</string>
    
    <string name="hint_username">请输入您的账号</string>
    <string name="hint_password">请输入您的密码</string>
    
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="passwords">再次输入密码</string>
    <string name="mobile">手机</string>
    <string name="wentidaan">问题答案</string>
    <string name="anwentidaan">安全问题答案</string>
    <string name="anquanwenti">安全问题</string>
    <string name="login_button">立即登陆</string>
    <string name="next">下一步</string>
    <string name="tijiao">提交</string>
    <string name="btn_return">返回</string>
    <string name="yes_update">确认修改</string>
    <string name="yes_update_password">新密码</string>
    <string name="yes_update_passwords">确认密码</string>
    <string name="register_submit">提交注册</string>
    <string name="login_register">注册账号</string>
    <string name="login_get_password">忘记密码</string>
    
    <string name="req_name">您的姓名</string>
    <string name="req_address">目前居住地址</string>
    <string name="reg_phone">联系电话</string>
    <string name="reg_mobile">手机号码</string>
    <string name="reg_email">邮箱地址</string>
    <string name="reg_card">身份证号码</string>
    <string name="reg_zhiye">职业</string>
    <string name="reg_height">身高</string>
    <string name="reg_weight">体重</string>
    
    <string name="reg_setting_info">立即填写</string>
    <string name="reg_close">以后再说</string>
    <string name="looding_all">已加载完全部信息</string>
    
    <string name="e_date_message">结束时间不能小于开始时间</string>
    <string name="s_date_message">开始时间不能小于当前日期</string>
    
</resources>
